force-app/main/default/objects/Recommended_Care_Professional__c/Recommended_Care_Professional__c.object-meta.xml
<CustomObject>
    <label>Recommended Care Professional</label>
    <nameField>
        <label>Recommended Care Professional Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommended Care Professionals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>