force-app/main/default/objects/Recommended_Care_Professional__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recommended Care Professionals</relationshipLabel>
    <relationshipName>Recommended_Care_Professionals</relationshipName>
    <type>Lookup</type>
</CustomField>