force-app/main/default/objects/Recommended_Care_Professional__c/fields/Recommendation_Score__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Score__c</fullName>
    <label>Recommendation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>