force-app/main/default/objects/Recommended_Care_Professional__c/fields/Service_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Recommended Care Professionals</relationshipLabel>
    <relationshipName>Recommended_Care_Professionals</relationshipName>
    <type>Lookup</type>
</CustomField>